--- a/Homepage.html
+++ b/Homepage.html
@@ -26,19 +26,19 @@
   <div class="row">
     <div class="col-sm-4">
       <div class="tile purple">
-        <h3 class="title">Badminton</h3>
+        <h3 class="title text-center">Badminton</h3>
         <p></p>
       </div>
     </div>
     <div class="col-sm-4">
       <div class="tile red">
-        <h3 class="title">Tennis</h3>
+        <h3 class="title text-center">Tennis</h3>
         <p></p>
       </div>
     </div>
     <div class="col-sm-4">
       <div class="tile orange">
-        <h3 class="title">Basketball</h3>
+        <h3 class="title text-center">Basketball</h3>
         <p></p>
       </div>
     </div>
@@ -46,19 +46,19 @@
   <div class="row">
     <div class="col-sm-4">
       <div class="tile green">
-        <h3 class="title">Volleyball</h3>
+        <h3 class="title text-center">Volleyball</h3>
         <p></p>
       </div>
     </div>
     <div class="col-sm-4">
       <div class="tile blue">
-        <h3 class="title">Racquetball</h3>
+        <h3 class="title text-center">Racquetball</h3>
         <p></p>
       </div>
     </div>
     <div class="col-sm-4">
       <div class="tile green">
-        <h3 class="title">Hiking</h3>
+        <h3 class="title text-center">Hiking</h3>
         <p></p>
       </div>
     </div>        
