--- a/Homepage.html
+++ b/Homepage.html
@@ -10,12 +10,24 @@
     <link rel="stylesheet" href="main.css">
   </head>
   <body>
+  <!-- Navbar -->
+  <nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">Find Sport Partner</a>
+    </div>
+    <ul class="nav navbar-nav navbar-right">
+      <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+      <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+    </ul>
+  </div>
+</nav>
     <br>
     <br>
     <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <h1><strong>Demo Home Page for Sports Mate</strong></h1>
+      <h1 style="color:black"><strong>Demo Home Page for Sports Mate</strong></h1>
     </div>
   </div>
   <div class="row">
