--- a/Sports/sports.html
+++ b/Sports/sports.html
@@ -48,7 +48,7 @@
 		
 		</div>
     	<footer>
-        	<p class="footertext">Copyright 2017-2018 Prithul Padival</p>
+        	<p class="footertext">Copyright 2017-2018 Pritul Padival</p>
         </footer>
    </div>
 </body>
