--- a/Sports/sports.html
+++ b/Sports/sports.html
@@ -21,7 +21,7 @@
          </div>
         
         <div id="login-buttons" class="pull-right">
-        		<a href="secong_page.htm" class="btn btn-danger">Sign In</a>	
+        		<a href="second_page.htm" class="btn btn-danger">Sign In</a>	
 				<a href="signup.html" class=" btn btn-success">Sign Up</a>
 				
 		</div>
