--- a/Sports/sports.html
+++ b/Sports/sports.html
@@ -22,7 +22,7 @@
         
         <div id="login-buttons" class="pull-right">
 <button onclick="document.getElementById('id01').style.display='block'" style="width:auto;" class="btn btn-danger">Sign In</button>
-				<a href="signup.html" class=" btn btn-success">Sign Up</a>
+				<a href="second_page.htm" class=" btn btn-success">Sign Up</a>
 				
 		</div>
 	</header>
