--- a/Sports/second_page.htm
+++ b/Sports/second_page.htm
@@ -102,7 +102,7 @@ $("#dd6").prop("disabled", "disabled");
 	
 	<header class="clearfix">
 			<div id="logo" class="pull-left">
-				<a href="sports.html"><img src="logo.png" class="img-responsive" alt="Sports Partner Finder"></a>
+				<a href="sports.html"><img src="img/logo.png" class="img-responsive" alt="Sports Partner Finder"></a>
 			</div>
 			<div id="login-button" class="pull-right">
         		<button onclick="document.getElementById('id01').style.display='block'" style="width:auto;" class="btn btn-danger">Sign In</button>	
